--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://mertbildirici.com",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && node --version",
     "postbuild": "react-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
